--- a/functions/package.json
+++ b/functions/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
     "eslint-plugin-promise": "^3.6.0"
   },
-  "private": true
+  "private": true,
+  "engines": {"node": "8"}
 }
