--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-simple-flex-grid": "^1.3.21"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build:style":"tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "start": "npm run build:style && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -38,5 +39,10 @@
   },
   "engines": {
     "node": "8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.7.4",
+    "postcss-cli": "^7.1.0",
+    "tailwindcss": "^1.1.4"
   }
 }
